update lagi hehe

--- a/probstat.ipynb
+++ b/probstat.ipynb
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -815,19 +815,19 @@
      "text": [
       "Uji Statistik: Rata-rata Sugar kurang dari 25\n",
       "Uji Signifikan: Rata-rata Sugar kurang dari 25\n",
-      "-251.39141610869683 0.0\n",
-      "0.0\n",
+      "Z: -251.39141610869683 P-Value: 0.0\n",
+      "\n",
       "Uji Statistik: Rata-rata Serving sama dengan 40\n",
       "Uji Signifikan: Rata-rata Serving sama dengan 40\n",
-      "-0.4525962230871718 0.6508395189432993\n",
-      "0.6508886318177685\n",
+      "Z: -0.4525962230871718 P-Value: 0.6508395189432993\n",
+      "\n",
       "Uji Statistik: Rata-rata 20 Sodium terakhir tidak sama dengan 74\n",
       "Uji Signifikan: Rata-rata 20 Sodium terakhir tidak sama dengan 74\n",
-      "2.5122240459234404 0.021186913892143725\n",
-      "0.6508886318177685\n",
-      "Uji Statistik: Proporsi Protein yang lebih dari 3 sama dengan 60%\n",
+      "Z: 2.5122240459234404 P-Value: 0.021186913892143725\n",
+      "\n",
+      "Uji Statistik: Proporsi Protein yang lebih dari 3 tidak sama dengan 60%\n",
       "Uji Signifikan: Proporsi Protein yang lebih dari 3 tidak sama dengan 60%\n",
-      "3.4132565374028184e-22 0.021186913892143725\n"
+      "Z: -9.813362488634224 P-Value: 9.862619952085252e-23\n"
      ]
     }
    ],
@@ -854,8 +854,8 @@
     "print(\"Uji Statistik:\", \"Rata-rata Sugar kurang dari 25\" if z < -critical_value else \"Rata-rata Sugar tidak kurang dari 25\")\n",
     "# Jika P-Value < alpha, maka H0 ditolak dan berarti rata-rata Sugar kurang dari 25\n",
     "print(\"Uji Signifikan:\", \"Rata-rata Sugar kurang dari 25\" if P_Value < alpha else \"Rata-rata Sugar tidak kurang dari 25\")\n",
-    "print(z, P_Value)\n",
-    "print(P_ValueT)\n",
+    "print(\"Z:\",z,\"P-Value:\", P_Value)\n",
+    "print()\n",
     "\n",
     "\n",
     "# Pada umumnya, rata-rata Serving untuk permen adalah 40 gram. Oleh karena itu, periksalah apakah rata-rata Serving permen yang diproduksi tidak bernilai 40 gram!\n",
@@ -872,8 +872,8 @@
     "print(\"Uji Statistik:\", \"Rata-rata Serving tidak sama dengan 40\" if z < -critical_value_2 or z > critical_value_2 else \"Rata-rata Serving sama dengan 40\")\n",
     "# Jika P-Value < alpha, maka H0 ditolak dan berarti rata-rata Serving tidak sama dengan 40\n",
     "print(\"Uji Signifikan:\", \"Rata-rata Serving tidak sama dengan 40\" if P_Value < alpha else \"Rata-rata Serving sama dengan 40\")\n",
-    "print(z, P_Value)\n",
-    "print(P_ValueT)\n",
+    "print(\"Z:\",z,\"P-Value:\", P_Value)\n",
+    "print()\n",
     "\n",
     "\n",
     "# Periksalah apakah rata-rata Sodium untuk permen 20 baris terakhir tidak sama dengan 74!\n",
@@ -890,8 +890,8 @@
     "print(\"Uji Statistik:\", \"Rata-rata 20 Sodium terakhir tidak sama dengan 74\" if z < -critical_value_2 or z > critical_value_2 else \"Rata-rata 20 Sodium terakhir sama dengan 74\")\n",
     "# Jika P-Value < alpha, maka H0 ditolak dan berarti rata-rata Sodium tidak sama dengan 74\n",
     "print(\"Uji Signifikan:\", \"Rata-rata 20 Sodium terakhir tidak sama dengan 74\" if P_Value < alpha else \"Rata-rata 20 Sodium terakhir sama dengan 74\")\n",
-    "print(z, P_Value)\n",
-    "print(P_ValueT)\n",
+    "print(\"Z:\",z,\"P-Value:\", P_Value)\n",
+    "print()\n",
     "\n",
     "\n",
     "# Periksalah apakah proporsi nilai Protein yang lebih besar dari 3 tidak sama dengan 60% dari total dataset!\n",
@@ -904,12 +904,13 @@
     "x = protein_lebih_besar_3.count()\n",
     "p0 = 0.6\n",
     "p = x / jumlahSample\n",
-    "z = 2 * binomial_distribution_less_than_range(x, jumlahSample, p0)\n",
+    "z = (p - p0) / np.sqrt(p0 * (1 - p0) / jumlahSample)\n",
+    "P_Value = 2 * z_test_p_value(abs(z))\n",
     "# Jika z < -z(0.025) atau z > z(0.025), maka H0 ditolak dan berarti proporsi Protein tidak sama dengan 60%\n",
     "print(\"Uji Statistik:\", \"Proporsi Protein yang lebih dari 3 tidak sama dengan 60%\" if z < -critical_value_2 or z > critical_value_2 else \"Proporsi Protein yang lebih dari 3 sama dengan 60%\")\n",
     "# Jika P-Value < alpha, maka H0 ditolak dan berarti proporsi Protein tidak sama dengan 60%\n",
     "print(\"Uji Signifikan:\", \"Proporsi Protein yang lebih dari 3 tidak sama dengan 60%\" if P_Value < alpha else \"Proporsi Protein yang lebih dari 3 sama dengan 60%\")\n",
-    "print(z, P_Value)"
+    "print(\"Z:\",z,\"P-Value:\", P_Value)"
    ]
   },
   {
@@ -998,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1013,7 @@
       "Uji Statistik: Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
       "Uji Signifikan Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
       "Uji Statistik: Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\n",
-      "Uji Signifikan Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\n"
+      "Uji Signifikan Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\n"
      ]
     }
    ],
@@ -1118,6 +1119,7 @@
     "p = (dataset1['Calories'][dataset1['Calories'] > 200].count() + dataset2['Calories'][dataset2['Calories'] > 200].count()) / (len(dataset1) + len(dataset2))\n",
     "z = (p0 - p1) / np.sqrt(p * (1 - p) * (1/jumlahSample1 + 1/jumlahSample2))\n",
     "z_critical = normal_distribution(alpha)\n",
+    "P_Value = z_test_p_value(z)\n",
     "# Jika z > z(0.05), maka H0 ditolak dan berarti proporsi Calories pada dataset1 lebih besar dari dataset2\n",
     "print(\"Uji Statistik:\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if z > z_critical else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")\n",
     "# Jika P-value < alpha, maka H0 ditolak\n",
