--- a/probstat.ipynb
+++ b/probstat.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1002,49 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Uji Statistik: Rata-rata Sugar pada awal produksi sama dengan akhir produksi\n",
-      "Uji Statistik: Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\n",
-      "Uji Statistik: Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
-      "Uji Statistik: Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 6 Dengan Hipotesis (Library)\n",
-    "# T-Test\n",
-    "\n",
-    "from scipy.stats import ttest_ind, f_oneway, norm\n",
-    "\n",
-    "# Periksalah apakah rata-rata Sugar dari permen yang diproduksi bernilai sama pada kedua kurun waktu\n",
-    "t_stat_sugar, p_value_sugar = ttest_ind(dataset1['Sugar'], dataset2['Sugar'])\n",
-    "print(\"Uji Statistik:\", \"Rata-rata Sugar pada awal produksi tidak sama dengan akhir produksi\" if p_value_sugar < alpha else \"Rata-rata Sugar pada awal produksi sama dengan akhir produksi\")\n",
-    "\n",
-    "# Bandingkan rata-rata Protein dari permen pada paruh awal dan akhir. Apakah rata-rata Protein pada dataset bagian awal lebih besar daripada bagian akhir sebesar 0.3 unit\n",
-    "t_stat_protein, p_value_protein = ttest_ind(dataset1['Protein'], dataset2['Protein'])\n",
-    "print(\"Uji Statistik:\", \"Rata-rata Protein pada awal produksi lebih besar dari akhir produksi sebesar 0.3 unit\" if t_stat_protein > 0 and p_value_protein < alpha else \"Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\")\n",
-    "\n",
-    "# Periksalah apakah variansi dari Sodium dari permen sama pada paruh awal dan akhir\n",
-    "f_stat_sodium, p_value_sodium = f_oneway(dataset1['Sodium'], dataset2['Sodium'])\n",
-    "print(\"Uji Statistik:\", \"Variansi Sodium pada awal produksi tidak sama dengan akhir produksi\" if p_value_sodium < alpha else \"Variansi Sodium pada awal produksi sama dengan akhir produksi\")\n",
-    "\n",
-    "# HASIL MASIH SALAH\n",
-    "# Periksalah apakah proporsi Calories dari permen yang lebih dari 200 pada paruh awal lebih besar daripada proporsi di paruh akhir\n",
-    "z_stat_calories1 = (dataset1['Calories'] > 200).mean()\n",
-    "z_stat_calories2 = (dataset2['Calories'] > 200).mean()\n",
-    "z_stat, p_value_calories = z_stat_calories1 - z_stat_calories2, norm().sf(z_stat_calories1 - z_stat_calories2)\n",
-    "print(\"Uji Statistik:\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if p_value_calories < alpha else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1169,6 +1127,52 @@
     "print(\"Uji Statistik:\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if z > z_critical else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")\n",
     "# Jika P-value < alpha, maka H0 ditolak\n",
     "print(\"Uji Signifikan\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if P_Value < alpha else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uji Statistik: Rata-rata Sugar pada awal produksi sama dengan akhir produksi\n",
+      "Uji Statistik: Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\n",
+      "Uji Statistik: Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
+      "0.03428103007037748 0.91700053988652\n",
+      "Uji Statistik: Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6 Dengan Hipotesis (Library)\n",
+    "# T-Test\n",
+    "\n",
+    "from scipy.stats import ttest_ind, f_oneway, ks_2samp\n",
+    "\n",
+    "# Periksalah apakah rata-rata Sugar dari permen yang diproduksi bernilai sama pada kedua kurun waktu\n",
+    "t_stat_sugar, p_value_sugar = ttest_ind(dataset1['Sugar'], dataset2['Sugar'])\n",
+    "print(\"Uji Statistik:\", \"Rata-rata Sugar pada awal produksi tidak sama dengan akhir produksi\" if p_value_sugar < alpha else \"Rata-rata Sugar pada awal produksi sama dengan akhir produksi\")\n",
+    "\n",
+    "# Bandingkan rata-rata Protein dari permen pada paruh awal dan akhir. Apakah rata-rata Protein pada dataset bagian awal lebih besar daripada bagian akhir sebesar 0.3 unit\n",
+    "t_stat_protein, p_value_protein = ttest_ind(dataset1['Protein'], dataset2['Protein'])\n",
+    "print(\"Uji Statistik:\", \"Rata-rata Protein pada awal produksi lebih besar dari akhir produksi sebesar 0.3 unit\" if t_stat_protein > 0 and p_value_protein < alpha else \"Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\")\n",
+    "\n",
+    "# Periksalah apakah variansi dari Sodium dari permen sama pada paruh awal dan akhir\n",
+    "f_stat_sodium, p_value_sodium = f_oneway(dataset1['Sodium'], dataset2['Sodium'])\n",
+    "print(\"Uji Statistik:\", \"Variansi Sodium pada awal produksi tidak sama dengan akhir produksi\" if p_value_sodium < alpha else \"Variansi Sodium pada awal produksi sama dengan akhir produksi\")\n",
+    "\n",
+    "first_half = dataset1['Calories'][dataset1['Calories'] > 200]\n",
+    "second_half = dataset2['Calories'][dataset2['Calories'] > 200]\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "# Kolmogorov-Smirnov test\n",
+    "stat, p_value = ks_2samp(first_half, second_half)\n",
+    "print(stat, p_value)\n",
+    "print(\"Uji Statistik:\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if p_value < alpha else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")"
    ]
   }
  ],
