gataulagi: no 6 nya

--- a/probstat.ipynb
+++ b/probstat.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,68 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read Data\n",
     "data = pd.read_csv(\"candy_clean.csv\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Utils With Built-in func\n",
-    "\n",
-    "# Function to calculate the binomial probability for range less than x\n",
-    "from typing import Tuple\n",
-    "\n",
-    "\n",
-    "def binomial_distribution_less_than_range(x, n, p):\n",
-    "    return st.binom.cdf(x, n, p)\n",
-    "\n",
-    "# Function to calculate the binomial probability for range greater than x\n",
-    "def binomial_distribution_greater_than_range(x, n, p):\n",
-    "    return 1 - st.binom.cdf(x, n, p)\n",
-    "\n",
-    "# Function to calculate the binomial probability for range between x1 and x2\n",
-    "def binomial_distribution_between_range(x1, x2, n, p):\n",
-    "    return st.binom.cdf(x2, n, p) - st.binom.cdf(x1-1, n, p)\n",
-    "\n",
-    "# Function to calculate the normal distribution (z) from alpha\n",
-    "def normal_distribution(alpha):\n",
-    "    return st.norm.ppf(1-alpha)\n",
-    "\n",
-    "# Function to calculate single point binomial distribution\n",
-    "def binomial_distribution(x, n, p):\n",
-    "    return np.math.comb(n, x) * p**x * (1-p)**(n-x) \n",
-    "\n",
-    "# Function to calculate t test critical value\n",
-    "def t_test_critical_value(df, alpha) -> float:\n",
-    "    return st.t.ppf(1-alpha, df)\n",
-    "\n",
-    "# Function to calculate f test critical value\n",
-    "# n1 = number of samples in first group\n",
-    "# n2 = number of samples in second group\n",
-    "# alpha = significance level\n",
-    "# returns the critical values for the f test (lower, upper)\n",
-    "def f_test_critical_value(alpha, df1, df2) -> Tuple[float, float]:\n",
-    "    return st.f.ppf(alpha, df1, df2), st.f.ppf(1-alpha, df1, df2)\n",
-    "\n",
-    "# Function to calculate P-value from t test\n",
-    "def t_test_p_value(t, df) -> float:\n",
-    "    return st.t.sf(t, df)\n",
-    "\n",
-    "# Function to calculate P-value from f test\n",
-    "def f_test_p_value(f, df1, df2) -> float:\n",
-    "    return st.f.sf(f, df1, df2)\n",
-    "\n",
-    "# Function to calculate P-value from z test\n",
-    "def z_test_p_value(z) -> float:\n",
-    "    return st.norm.sf(z)"
    ]
   },
   {
@@ -119,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -708,6 +652,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utils With Built-in func\n",
+    "\n",
+    "# Function to calculate the binomial probability for range less than x\n",
+    "from typing import Tuple\n",
+    "\n",
+    "\n",
+    "def binomial_distribution_less_than_range(x, n, p):\n",
+    "    return st.binom.cdf(x, n, p)\n",
+    "\n",
+    "# Function to calculate the binomial probability for range greater than x\n",
+    "def binomial_distribution_greater_than_range(x, n, p):\n",
+    "    return 1 - st.binom.cdf(x, n, p)\n",
+    "\n",
+    "# Function to calculate the binomial probability for range between x1 and x2\n",
+    "def binomial_distribution_between_range(x1, x2, n, p):\n",
+    "    return st.binom.cdf(x2, n, p) - st.binom.cdf(x1-1, n, p)\n",
+    "\n",
+    "# Function to calculate the normal distribution (z) from alpha\n",
+    "def normal_distribution(alpha):\n",
+    "    return st.norm.ppf(1-alpha)\n",
+    "\n",
+    "# Function to calculate single point binomial distribution\n",
+    "def binomial_distribution(x, n, p):\n",
+    "    return np.math.comb(n, x) * p**x * (1-p)**(n-x) \n",
+    "\n",
+    "# Function to calculate t test critical value\n",
+    "def t_test_critical_value(df, alpha) -> float:\n",
+    "    return st.t.ppf(1-alpha, df)\n",
+    "\n",
+    "# Function to calculate f test critical value\n",
+    "# n1 = number of samples in first group\n",
+    "# n2 = number of samples in second group\n",
+    "# alpha = significance level\n",
+    "# returns the critical values for the f test (lower, upper)\n",
+    "def f_test_critical_value(alpha, df1, df2) -> Tuple[float, float]:\n",
+    "    return st.f.ppf(alpha, df1, df2), st.f.ppf(1-alpha, df1, df2)\n",
+    "\n",
+    "# Function to calculate P-value from t test\n",
+    "def t_test_p_value(t, df) -> float:\n",
+    "    return st.t.sf(t, df)\n",
+    "\n",
+    "# Function to calculate P-value from f test\n",
+    "def f_test_p_value(f, df1, df2) -> float:\n",
+    "    return st.f.sf(f, df1, df2)\n",
+    "\n",
+    "# Function to calculate P-value from z test\n",
+    "def z_test_p_value(z) -> float:\n",
+    "    return st.norm.cdf(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -732,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +849,6 @@
     "critical_value_2 = normal_distribution(alpha/2) # Z value for alpha/2 = 0.025\n",
     "\n",
     "\n",
-    "# TODO: CHECK THIS PART\n",
     "# Perusahaan menerima beberapa keluhan bahwa permennya kurang manis. Periksalah anda mengecek apakah rata-rata nilai Sugar di bawah 25?\n",
     "# H0: avg_sugar = 25\n",
     "# H1 = avg_sugar < 25\n",
@@ -851,8 +857,6 @@
     "# Komputasi\n",
     "z = (data['Sugar'].mean() - 25) / (data['Sugar'].std() / np.sqrt(jumlahSample))\n",
     "P_Value = z_test_p_value(abs(z))\n",
-    "df = jumlahSample - 1\n",
-    "P_ValueT = t_test_p_value(abs(z), df)\n",
     "# Jika z < -z(0.05), maka H0 ditolak dan berarti rata-rata Sugar kurang dari 25\n",
     "print(\"Uji Statistik:\", \"Rata-rata Sugar kurang dari 25\" if z < -critical_value else \"Rata-rata Sugar tidak kurang dari 25\")\n",
     "# Jika P-Value < alpha, maka H0 ditolak dan berarti rata-rata Sugar kurang dari 25\n",
@@ -869,8 +873,6 @@
     "# Komputasi\n",
     "z = (avg_serving - 40) / (data['Serving'].std() / np.sqrt(jumlahSample))\n",
     "P_Value = 2 * z_test_p_value(abs(z))\n",
-    "df = jumlahSample - 1\n",
-    "P_ValueT = 2 * t_test_p_value(abs(z), df)\n",
     "# Jika z < -z(0.025) atau z > z(0.025), maka H0 ditolak dan berarti rata-rata Serving tidak sama dengan 40\n",
     "print(\"Uji Statistik:\", \"Rata-rata Serving tidak sama dengan 40\" if z < -critical_value_2 or z > critical_value_2 else \"Rata-rata Serving sama dengan 40\")\n",
     "# Jika P-Value < alpha, maka H0 ditolak dan berarti rata-rata Serving tidak sama dengan 40\n",
@@ -938,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1010,13 +1012,10 @@
      "output_type": "stream",
      "text": [
       "Uji Statistik: Rata-rata Sugar pada awal produksi sama dengan akhir produksi\n",
-      "P-Value: 0.18791256099499634 T-Statistic: -1.3172300582193421\n",
       "\n",
       "Uji Statistik: Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\n",
-      "P-Value: 0.6153713002025847 T-Statistic: 0.5024999004536006\n",
       "\n",
       "Uji Statistik: Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
-      "P-Value: 0.6050295033205032 F-Statistic: 0.26756150457204986\n",
       "\n",
       "Uji Statistik: Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\n"
      ]
@@ -1024,26 +1023,22 @@
    ],
    "source": [
     "# 6 Dengan Hipotesis (Library)\n",
-    "# T-Test\n",
     "\n",
-    "from scipy.stats import ttest_ind, f_oneway, norm\n",
+    "from scipy.stats import ttest_ind, f_oneway, norm, levene\n",
     "\n",
     "# Periksalah apakah rata-rata Sugar dari permen yang diproduksi bernilai sama pada kedua kurun waktu\n",
     "t_stat_sugar, p_value_sugar = ttest_ind(dataset1['Sugar'], dataset2['Sugar'])\n",
     "print(\"Uji Statistik:\", \"Rata-rata Sugar pada awal produksi tidak sama dengan akhir produksi\" if p_value_sugar < alpha else \"Rata-rata Sugar pada awal produksi sama dengan akhir produksi\")\n",
-    "print(\"P-Value:\", p_value_sugar, \"T-Statistic:\", t_stat_sugar)\n",
     "print()\n",
     "\n",
     "# Bandingkan rata-rata Protein dari permen pada paruh awal dan akhir. Apakah rata-rata Protein pada dataset bagian awal lebih besar daripada bagian akhir sebesar 0.3 unit\n",
     "t_stat_protein, p_value_protein = ttest_ind(dataset1['Protein'], dataset2['Protein'])\n",
     "print(\"Uji Statistik:\", \"Rata-rata Protein pada awal produksi lebih besar dari akhir produksi sebesar 0.3 unit\" if t_stat_protein > 0 and p_value_protein < alpha else \"Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\")\n",
-    "print(\"P-Value:\", p_value_protein, \"T-Statistic:\", t_stat_protein)\n",
     "print()\n",
     "\n",
     "# Periksalah apakah variansi dari Sodium dari permen sama pada paruh awal dan akhir\n",
-    "f_stat_sodium, p_value_sodium = f_oneway(dataset1['Sodium'], dataset2['Sodium'])\n",
+    "f_stat_sodium, p_value_sodium = levene(dataset1['Sodium'], dataset2['Sodium'])\n",
     "print(\"Uji Statistik:\", \"Variansi Sodium pada awal produksi tidak sama dengan akhir produksi\" if p_value_sodium < alpha else \"Variansi Sodium pada awal produksi sama dengan akhir produksi\")\n",
-    "print(\"P-Value:\", p_value_sodium, \"F-Statistic:\", f_stat_sodium)\n",
     "print()\n",
     "\n",
     "# HASIL MASIH SALAH\n",
@@ -1056,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1065,19 +1060,15 @@
      "text": [
       "Uji Statistik: Rata-rata Sugar pada awal produksi sama dengan akhir produksi\n",
       "Uji Signifikan Rata-rata Sugar pada awal produksi sama dengan akhir produksi\n",
-      "T: -1.3172300582193424 P-Value: 0.9060437195025018\n",
       "\n",
       "Uji Statistik: Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\n",
       "Uji Signifikan Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\n",
-      "T: -6.120434153579225 P-Value: 0.9999999994399198\n",
       "\n",
       "Uji Statistik: Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
       "Uji Signifikan Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
-      "F: 1.0560880978147356 P-Value: 0.1943019175597394\n",
       "\n",
       "Uji Statistik: Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\n",
-      "Uji Signifikan Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\n",
-      "Z: 1.8335766583383875 P-Value: 0.03335842985324732\n"
+      "Uji Signifikan Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\n"
      ]
     }
    ],
@@ -1129,7 +1120,6 @@
     "print(\"Uji Statistik:\", \"Rata-rata Sugar pada awal produksi tidak sama dengan akhir produksi\" if t < -t_critical or t > t_critical else \"Rata-rata Sugar pada awal produksi sama dengan akhir produksi\")\n",
     "# Jika P-value < alpha, maka H0 ditolak\n",
     "print(\"Uji Signifikan\", \"Rata-rata Sugar pada awal produksi tidak sama dengan akhir produksi\" if P_Value < alpha else \"Rata-rata Sugar pada awal produksi sama dengan akhir produksi\")\n",
-    "print(\"T:\",t,\"P-Value:\", P_Value)\n",
     "print()\n",
     "\n",
     "\n",
@@ -1152,7 +1142,6 @@
     "print(\"Uji Statistik:\", \"Rata-rata Protein pada awal produksi lebih besar dari akhir produksi sebesar 0.3 unit\" if t > t_critical else \"Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\")\n",
     "# Jika P-value < alpha, maka H0 ditolak\n",
     "print(\"Uji Signifikan\", \"Rata-rata Protein pada awal produksi lebih besar dari akhir produksi sebesar 0.3 unit\" if P_Value < alpha else \"Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\")\n",
-    "print(\"T:\",t,\"P-Value:\", P_Value)\n",
     "print()\n",
     "\n",
     "\n",
@@ -1173,7 +1162,6 @@
     "print(\"Uji Statistik:\", \"Variansi Sodium pada awal produksi tidak sama dengan akhir produksi\" if f < f_critical[0] or f > f_critical[1] else \"Variansi Sodium pada awal produksi sama dengan akhir produksi\")\n",
     "# Jika P-value < alpha, maka H0 ditolak\n",
     "print(\"Uji Signifikan\", \"Variansi Sodium pada awal produksi tidak sama dengan akhir produksi\" if P_Value < alpha else \"Variansi Sodium pada awal produksi sama dengan akhir produksi\")\n",
-    "print(\"F:\",f,\"P-Value:\", P_Value)\n",
     "print()\n",
     "\n",
     "\n",
@@ -1186,61 +1174,14 @@
     "df = jumlahSample1 + jumlahSample2 - 2\n",
     "p0 = dataset1['Calories'][dataset1['Calories'] > 200].count() / len(dataset1)\n",
     "p1 = dataset2['Calories'][dataset2['Calories'] > 200].count() / len(dataset2)\n",
-    "p = (dataset1['Calories'][dataset1['Calories'] > 200].count() + dataset2['Calories'][dataset2['Calories'] > 200].count()) / (len(dataset1) + len(dataset2))\n",
+    "p = (dataset1['Calories'][dataset1['Calories'] > 200].count() + dataset2['Calories'][dataset2['Calories'] > 200].count()) / (jumlahSample1 + jumlahSample2)\n",
     "z = (p0 - p1) / np.sqrt(p * (1 - p) * (1/jumlahSample1 + 1/jumlahSample2))\n",
     "z_critical = normal_distribution(alpha)\n",
     "P_Value = z_test_p_value(z)\n",
     "# Jika z > z(0.05), maka H0 ditolak dan berarti proporsi Calories pada dataset1 lebih besar dari dataset2\n",
     "print(\"Uji Statistik:\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if z > z_critical else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")\n",
     "# Jika P-value < alpha, maka H0 ditolak\n",
-    "print(\"Uji Signifikan\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if P_Value < alpha else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")\n",
-    "print(\"Z:\",z,\"P-Value:\", P_Value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Uji Statistik: Rata-rata Sugar pada awal produksi sama dengan akhir produksi\n",
-      "Uji Statistik: Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\n",
-      "Uji Statistik: Variansi Sodium pada awal produksi sama dengan akhir produksi\n",
-      "0.03428103007037748 0.91700053988652\n",
-      "Uji Statistik: Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 6 Dengan Hipotesis (Library)\n",
-    "# T-Test\n",
-    "\n",
-    "from scipy.stats import ttest_ind, f_oneway, ks_2samp\n",
-    "\n",
-    "# Periksalah apakah rata-rata Sugar dari permen yang diproduksi bernilai sama pada kedua kurun waktu\n",
-    "t_stat_sugar, p_value_sugar = ttest_ind(dataset1['Sugar'], dataset2['Sugar'])\n",
-    "print(\"Uji Statistik:\", \"Rata-rata Sugar pada awal produksi tidak sama dengan akhir produksi\" if p_value_sugar < alpha else \"Rata-rata Sugar pada awal produksi sama dengan akhir produksi\")\n",
-    "\n",
-    "# Bandingkan rata-rata Protein dari permen pada paruh awal dan akhir. Apakah rata-rata Protein pada dataset bagian awal lebih besar daripada bagian akhir sebesar 0.3 unit\n",
-    "t_stat_protein, p_value_protein = ttest_ind(dataset1['Protein'], dataset2['Protein'])\n",
-    "print(\"Uji Statistik:\", \"Rata-rata Protein pada awal produksi lebih besar dari akhir produksi sebesar 0.3 unit\" if t_stat_protein > 0 and p_value_protein < alpha else \"Rata-rata Protein pada awal produksi tidak lebih besar dari akhir produksi sebesar 0.3 unit\")\n",
-    "\n",
-    "# Periksalah apakah variansi dari Sodium dari permen sama pada paruh awal dan akhir\n",
-    "f_stat_sodium, p_value_sodium = f_oneway(dataset1['Sodium'], dataset2['Sodium'])\n",
-    "print(\"Uji Statistik:\", \"Variansi Sodium pada awal produksi tidak sama dengan akhir produksi\" if p_value_sodium < alpha else \"Variansi Sodium pada awal produksi sama dengan akhir produksi\")\n",
-    "\n",
-    "first_half = dataset1['Calories'][dataset1['Calories'] > 200]\n",
-    "second_half = dataset2['Calories'][dataset2['Calories'] > 200]\n",
-    "\n",
-    "alpha = 0.05\n",
-    "\n",
-    "# Kolmogorov-Smirnov test\n",
-    "stat, p_value = ks_2samp(first_half, second_half)\n",
-    "print(stat, p_value)\n",
-    "print(\"Uji Statistik:\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if p_value < alpha else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")"
+    "print(\"Uji Signifikan\", \"Proporsi Calories > 200 pada awal produksi lebih besar dari akhir produksi\" if P_Value < alpha else \"Proporsi Calories > 200 pada awal produksi tidak lebih besar dari akhir produksi\")"
    ]
   }
  ],
